test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_read_expr.draco
proc main() void : a := read(ch; a); corp;
