test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_oct_const_wrong_digit.draco
proc main() void : a := 0o81234567; corp;

